changes done , fixed what's Hot section and default image and alignment

--- a/src/components/Community Dark Mood/Community Final Dark/CommunityFinalDark.module.css
+++ b/src/components/Community Dark Mood/Community Final Dark/CommunityFinalDark.module.css
@@ -173,7 +173,7 @@ font-weight: 700;
   margin-top: 1rem;
   display: flex;
   gap: 2.5rem;
-  justify-content: space-around;
+  justify-content: space-between;
   /* margin-right: 88px; */
 }
 
