--- a/src/components/Community Dark Mood/Post Card Dark Mode/PostCardDark.module.css
+++ b/src/components/Community Dark Mood/Post Card Dark Mode/PostCardDark.module.css
@@ -426,6 +426,7 @@ letter-spacing: 0.42px;
   margin-top: 1rem;
   margin-right: 15px;
   margin-left: 15px;
+  object-fit: cover;
 }
 
 .newCommentAddImageAndUpload {
