--- a/src/components/Post Card/Shared Post Card/SharedPostCard.module.css
+++ b/src/components/Post Card/Shared Post Card/SharedPostCard.module.css
@@ -233,6 +233,7 @@ font-weight: 600;
     border-radius: 50%;
     margin-top: 1.2rem;
     margin-right: 1rem;
+    object-fit: cover;
 }
 .textAreaUploadContainer{
     position: relative;
